[gd_scene load_steps=6 format=3 uid="uid://d2ykemmyhdq57"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_p02qj"]
[ext_resource type="Texture2D" uid="uid://lvxi3v4vgpwq" path="res://assets/Level1/GDLevel1.png" id="2_xnd0l"]
[ext_resource type="FontFile" uid="uid://c84gdatq4eyha" path="res://assets/fonts/Silkscreen/Silkscreen-Regular.ttf" id="3_a38b1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_inqos"]
radius = 3.10351
height = 9.31054

[sub_resource type="CircleShape2D" id="CircleShape2D_ot1jq"]
radius = 15.0

[node name="Player" type="CharacterBody2D"]
z_index = 3
scale = Vector2(1.9147, 1.9147)
collision_layer = 2
script = ExtResource("1_p02qj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xnd0l")
region_enabled = true
region_rect = Rect2(129.809, 251.377, 14.0536, 21.6209)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.522275, 7.31185)
rotation = -1.57079
scale = Vector2(1.00971, 1.16989)
shape = SubResource("CapsuleShape2D_inqos")

[node name="InteractionComponents" type="Node2D" parent="."]
z_index = 1

[node name="InteractLabel" type="Label" parent="InteractionComponents"]
offset_left = -24.5469
offset_top = -17.2351
offset_right = 173.453
offset_bottom = 1.76492
scale = Vector2(0.25, 0.25)
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("3_a38b1")
theme_override_font_sizes/font_size = 14
text = "text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionArea" type="Area2D" parent="InteractionComponents"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponents/InteractionArea"]
position = Vector2(-1.19209e-07, 9.53674e-07)
scale = Vector2(1.00773, 1.05963)
shape = SubResource("CircleShape2D_ot1jq")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="area_entered" from="InteractionComponents/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionComponents/InteractionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
